CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(IbApiClient VERSION 1.0.0 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")

ADD_SUBDIRECTORY(tws-api)
ADD_SUBDIRECTORY(library)
ADD_SUBDIRECTORY(examples)
