SET(BINARY ${CMAKE_PROJECT_NAME}_src)
INCLUDE_DIRECTORIES(../include)

FILE(GLOB SOURCES *.cpp)
SET(SOURCES ${SOURCES})
INCLUDE(FetchContent)
FETCHCONTENT_DECLARE(SFML
        GIT_REPOSITORY https://github.com/SFML/SFML.git
        GIT_TAG 2.6.x)
FETCHCONTENT_MAKEAVAILABLE(SFML)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}_src ${SOURCES})
ADD_LIBRARY(${BINARY}_lib SHARED ${SOURCES}
        main.cpp)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_src ${BINARY}_lib)