SET(BINARY ${CMAKE_PROJECT_NAME}_src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
FILE(GLOB SOURCES *.cpp)
SET(SOURCES ${SOURCES})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}_src ${SOURCES})
ADD_LIBRARY(${BINARY}_lib SHARED ${SOURCES} main.cpp)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_src ${BINARY}_lib ${CMAKE_SOURCE_DIR}/lib/libIbGatewayClient.so)